--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <h1 class="page-title" data-i18n="app_name" data-i18n-module="common">KrishiSaathi</h1>
 <p data-i18n="tagline" data-i18n-module="common">Your Farming Companion</p>
 <div class="card">
-  <h2 data-i18n="navigation.pest_doctor" data-i18n-module="common">Pest Doctor</h2>
+  <h2 data-i18n="navigation.pest_health" data-i18n-module="common">Pest Health</h2>
   <p class="card-desc" data-i18n="home.pest_card_desc" data-i18n-module="common">Get instant pest and crop advice.</p>
   <a href="{{ url_for('chatbot_page') }}" class="btn btn--primary" data-i18n="buttons.start" data-i18n-module="common">Start</a>
 </div>
